--- a/charts/rfe-pipelines/templates/rfe-kickstart-pipeline.yaml
+++ b/charts/rfe-pipelines/templates/rfe-kickstart-pipeline.yaml
@@ -3,7 +3,9 @@ kind: Pipeline
 metadata:
   namespace: {{ template "common.names.namespace" $ }}
   labels:
-    {{- include "common.labels.labels" . | nindent 4 }}  
+    {{- include "common.labels.labels" . | nindent 4 }}
+  annotations:
+    {{- toYaml .Values.commonCR.annotations | nindent 4 }}    
   name: rfe-kickstart-pipeline
 spec:
   params:
