Fixes wrong target namespace for CNV operatorGroup

--- a/charts/cnv/templates/operatorgroup.yaml
+++ b/charts/cnv/templates/operatorgroup.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: {{ template "common.names.namespace" $ }}
 spec:
   targetNamespaces:
-    - {{ .Values.namespace }}
+    - {{ template "common.names.namespace" . }}
