Fixes out-of-sync drift in SA for /imagePullSecrets and /secrets

--- a/openshift/gitops/manifests/bootstrap/argocd/base/argocd.yaml
+++ b/openshift/gitops/manifests/bootstrap/argocd/base/argocd.yaml
@@ -50,4 +50,10 @@ spec:
         hs.status = "Progressing"
         hs.message = "Waiting for Subscription to complete."
         return hs
+    ServiceAccount:
+      ignoreDifferences: |
+        jsonPointers:
+        - /imagePullSecrets
+        - /secrets
+      
 
