Add post-install hook delete for nexus job

--- a/charts/nexus/templates/nexus-setup-role.yaml
+++ b/charts/nexus/templates/nexus-setup-role.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: {{ template "common.names.namespace" $ }}
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
+  annotations:
+    {{- toYaml .Values.setupJob.annotations | nindent 4}}
 rules:
   - apiGroups:
       - ""
