--- a/charts/nexus/templates/nexus-setup-serviceaccount.yaml
+++ b/charts/nexus/templates/nexus-setup-serviceaccount.yaml
@@ -6,3 +6,5 @@ metadata:
   namespace: {{ template "common.names.namespace" $ }}
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
+  annotations:
+    {{- toYaml .Values.setupJob.annotations | nindent 4}}
