--- a/charts/nexus/templates/nexus-setup-rolebinding.yaml
+++ b/charts/nexus/templates/nexus-setup-rolebinding.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: {{ template "common.names.namespace" $ }}
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
+  annotations:
+    {{- toYaml .Values.setupJob.annotations | nindent 4}}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -14,3 +16,4 @@ subjects:
   - kind: ServiceAccount
     name: {{ $setupJobName }}
     namespace: {{ template "common.names.namespace" $ }}
+s
