--- a/charts/quay/templates/quay-setup-job.yaml
+++ b/charts/quay/templates/quay-setup-job.yaml
@@ -1,14 +1,13 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  annotations:
-    helm.sh/hook: post-install
-    helm.sh/hook-delete-policy: hook-succeeded
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
     run: quay-setup-ansible-job
+  annotations:
+    {{- toYaml .Values.setupJob.annotations | nindent 4 }}
   name: quay-setup-ansible-job
-  namespace: rfe
+  namespace: {{.Values.setupJob.namespace}}
 spec:
   template:
     spec:
