--- a/charts/quay/values.yaml
+++ b/charts/quay/values.yaml
@@ -22,11 +22,12 @@ subscription:
   annotations:
     "helm.sh/hook": pre-install
     "helm.sh/hook-delete-policy": hook-failed
-
+  channel: stable-3.6
 
 quayRegistryCR:
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+  targetNamespace: quay
 
 setupJob:
   gitRepository: https://github.com/redhat-cop/rhel-edge-automation-arch.git
