Extract service account name in quay

--- a/charts/quay/templates/quay-setup-job.yaml
+++ b/charts/quay/templates/quay-setup-job.yaml
@@ -37,6 +37,6 @@ spec:
           name: ansible-rfe-runner
       dnsPolicy: ClusterFirst
       restartPolicy: OnFailure
-      serviceAccount: rfe-automation
-      serviceAccountName: rfe-automation
+      serviceAccount: {{ .Values.serviceAccount }}
+      serviceAccountName: {{ .Values.serviceAccount }}
       terminationGracePeriodSeconds: 30
