--- a/charts/quay/templates/rfe-automation-role-quay.yaml
+++ b/charts/quay/templates/rfe-automation-role-quay.yaml
@@ -3,8 +3,10 @@ kind: Role
 metadata:
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
-  name: rfe-automation-quay
-  namespace: {{ template "common.names.namespace" $ }}
+  name: {{ .Values.serviceAccount }}-quay
+  namespace: {{ .Values.quayRegistryCR.targetNamespace }}
+  annotations:
+    {{- toYaml .Values.setupJob.annotations | nindent 4 }}  
 rules:
   - apiGroups:
       - "*"
