--- a/charts/quay/values.yaml
+++ b/charts/quay/values.yaml
@@ -21,11 +21,20 @@ quay:
 subscription:
   annotations:
     "helm.sh/hook": pre-install
+    "helm.sh/hook-delete-policy": hook-failed
+  channel: quay-v3.5
 
 quayRegistryCR:
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+  targetNamespace: quay
 
 setupJob:
   gitRepository: https://github.com/redhat-cop/rhel-edge-automation-arch.git
   gitBranch: main
+  annotations:
+    helm.sh/hook: post-install
+    helm.sh/hook-delete-policy: hook-succeeded
+  namespace: rfe
+
+serviceAccount: rfe-automation
