Updates to application-manager

--- a/charts/application-manager/templates/application.yaml
+++ b/charts/application-manager/templates/application.yaml
@@ -5,12 +5,16 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: {{ default $chartName $chart.name }}
-  namespace: {{ $chart.namespace | default $.Release.Namespace }}
+  namespace: {{ $chart.namespace | default (default $.Release.Namespace $.Values.common.namespace) }}
 spec:
+{{- if $chart.ignoreDifferences }}
+  ignoreDifferences:
+    {{- tpl (toYaml $chart.ignoreDifferences) $ | nindent 4 }}
+{{- end }}
   destination:
     namespace: {{ include "application-manager.destinationNamespace" (dict "chart" $chart "Values" $.Values "Release" $.Release) }}
-    server: {{ $chart.server | default $.Values.common.server }}
-  project: {{ $chart.project | default $.Values.common.project }}
+    server: {{ $chart.server | default (default $.Values.argocd.server $.Values.common.server) }}
+  project: {{ $chart.project | default (default $.Values.argocd.project $.Values.common.project) }}
   source:
 {{- if or ($chart.parameters) ($chart.valueFiles) ($chart.values) }}
     helm:
@@ -38,8 +42,8 @@ spec:
 {{- else }}
     path: {{ include "application-manager.chartPath" (dict "chart" $chart "Values" $.Values "Release" $.Release) }}
 {{- end }}
-    repoURL: {{ $chart.repoURL | default $.Values.common.repoURL }}
-    targetRevision: {{ $chart.targetRevision | default $.Values.common.targetRevision }}
+    repoURL: {{ include "application-manager.gitURL" (dict "chart" $chart "Values" $.Values) }}
+    targetRevision: {{ include "application-manager.gitRef" (dict "chart" $chart "Values" $.Values) }}
   syncPolicy:
     automated:
       prune: {{ $chart.prune | default $.Values.common.prune }}
@@ -49,6 +53,10 @@ spec:
   {{- range $chart.syncOptions }}
       - {{ . }}
   {{- end }}
+{{- end }}
+{{- if $chart.retry }}
+    retry:
+      {{- tpl (toYaml $chart.retry) $ | nindent 6 }}
 {{- end }}
 {{- end }}
 {{- end }}
