--- a/charts/application-manager/templates/application.yaml
+++ b/charts/application-manager/templates/application.yaml
@@ -6,6 +6,14 @@ kind: Application
 metadata:
   name: {{ default $chartName $chart.name }}
   namespace: {{ $chart.namespace | default (default $.Release.Namespace $.Values.common.namespace) }}
+{{- if $chart.annotations }}
+  annotations:
+    {{- tpl (toYaml $chart.annotations) $ | nindent 4 }}
+{{- end }}
+{{- if $chart.labels }}
+  annotations:
+    {{- tpl (toYaml $chart.labels) $ | nindent 4 }}
+{{- end }}
 spec:
 {{- if $chart.ignoreDifferences }}
   ignoreDifferences:
