--- a/charts/application-manager/values.yaml
+++ b/charts/application-manager/values.yaml
@@ -1,3 +1,9 @@
 argocd:
   server: https://kubernetes.default.svc
   project: default
+  retry:
+    limit: -1 # number of failed sync attempt retries; unlimited number of attempts if less than 0
+    backoff:
+      duration: 5s # the amount to back off. Default unit is seconds, but could also be a duration (e.g. "2m", "1h")
+      factor: 2 # a factor to multiply the base duration after each failed retry
+      maxDuration: 3m # the maximum amount of time allowed for the backoff strategy
