--- a/charts/user-mgmt/templates/merge-oauth-identity-providers-rfe-oauth-secret.yaml
+++ b/charts/user-mgmt/templates/merge-oauth-identity-providers-rfe-oauth-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: rfe-oauth
+  name: {{ .Values.rfe.oauth.name }}
   namespace: {{ template "common.names.namespace" $ }}
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
