--- a/charts/user-mgmt/templates/merge-oauth-identity-providers-role-rolebinding.yaml
+++ b/charts/user-mgmt/templates/merge-oauth-identity-providers-role-rolebinding.yaml
@@ -1,14 +1,14 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: rfe-oauth
+  name: {{ .Values.rfe.oauth.name }}
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: rfe-oauth
+  name: {{ .Values.rfe.oauth.name }}
 subjects:
   - kind: ServiceAccount
-    name: rfe-oauth
+    name: {{ .Values.rfe.oauth.name }}
     namespace: {{ template "common.names.namespace" $ }}
