--- a/helm/testing/byo/byo.yaml
+++ b/helm/testing/byo/byo.yaml
@@ -46,13 +46,13 @@ application-manager:
                             kind: Group
                             name: rfe-admins
                     groups:
-                      name: rfe-admins
-                      users:
-                        - user1
-                        - user2
-                        - user3
-                        - user4
-                        - user5
+                      - name: rfe-admins
+                        users:
+                          - user1
+                          - user2
+                          - user3
+                          - user4
+                          - user5
                     identityProviders:
                       - name: RFE
                         mappingMethod: claim
