--- a/charts/catalogsources/values.yaml
+++ b/charts/catalogsources/values.yaml
@@ -8,5 +8,8 @@ catalogsources:
       registry: quay.io
       repository: redhatgov/operator-catalog
       version: latest
+    update:
+      enabled: true
+      interval: 30m0s
 marketplace:
   namespace: openshift-marketplace
