Updating requests/limits for Nexus deployment.

--- a/charts/nexus/values.yaml
+++ b/charts/nexus/values.yaml
@@ -9,11 +9,11 @@ nexus:
     adminUsers: []
   resources:
     requests:
-      cpu: 500m
-      memory: 1024Mi
-    limits:
       cpu: 1
       memory: 2048Mi
+    limits:
+      cpu: 2
+      memory: 4096Mi
   expose:
     ssl: true
     kind: Route
