--- a/charts/image-builder-vm/templates/image-builder-vm-ansible-job.yaml
+++ b/charts/image-builder-vm/templates/image-builder-vm-ansible-job.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   template:
     spec:
-      activeDeadlineSeconds: 600
+      activeDeadlineSeconds: {{ $.Values.ansibleVM.activeDeadlineSeconds }}
       containers:
         - image: image-registry.openshift-image-registry.svc:5000/rfe/ansible-rfe-runner:latest
           env:
