--- a/charts/nexus/values.yaml
+++ b/charts/nexus/values.yaml
@@ -44,5 +44,5 @@ setup:
 
 setupJob:
   annotations:
-    "helm.sh/hook": post-install,post-upgrade
-    "helm.sh/hook-delete-policy": hook-succeeded
+    argocd.argoproj.io/hook: PostSync
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
