Updating search pattern for tarball.

--- a/ansible/roles/oci-push-image/tasks/main.yaml
+++ b/ansible/roles/oci-push-image/tasks/main.yaml
@@ -67,7 +67,7 @@
     depth: 0
     paths: "{{ tar_directory }}"
     patterns:
-      - "{{ build_commit_id }}-.*-container.tar"
+      - "{{ build_commit_id }}-container.tar"
     use_regex: yes
   register: find_results
   failed_when:
