Added installplan and build to argocd status

--- a/charts/argocd/templates/argocd.yaml
+++ b/charts/argocd/templates/argocd.yaml
@@ -108,3 +108,33 @@ spec:
         hs.status = "Progressing"
         hs.message = "Waiting for PVC"
         return hs
+    operators.coreos.com/InstallPlan:
+      health.lua: |
+        hs = {}
+        if obj.status ~= nil then
+          if obj.status.phase ~= nil then
+            if obj.status.phase == "Completed" then
+              hs.status = "Healthy"
+              hs.message = obj.status.phase
+              return hs
+            end
+          end
+        end
+        hs.status = "Progressing"
+        hs.message = "Waiting for Build to complete"
+        return hs
+    build.openshift.io/Build:
+      health.lua: |
+        hs = {}
+        if obj.status ~= nil then
+          if obj.status.phase ~= nil then
+            if obj.status.phase == "Completed" then
+              hs.status = "Healthy"
+              hs.message = obj.status.phase
+              return hs
+            end
+          end
+        end
+        hs.status = "Progressing"
+        hs.message = "Waiting for Build to complete"
+        return hs
