--- a/charts/cnv/values.yaml
+++ b/charts/cnv/values.yaml
@@ -1,10 +1,16 @@
 ---
+cdiCR:
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+
 kubevirtCR:
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     deployOVS: "false"
   labels:
-    app: kubevirt-hyperconverged
+    app: kubevirt-cr
+  featureGates:
+    - DataVolumes
 cnv:
   debug:
-    useEmulation: "false"
+    useEmulation: false
